@@ -11,7 +11,6 @@ import org.springframework.stereotype.Component;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -49,7 +48,7 @@ public class ProductPersistenceAdapter implements ProductRepositoryPort {
 		return jpaProductRepository.findAll()
 				.stream()
 				.map(productMapper::toDomain)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	@Override
